<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:id="@+id/more_codelogin_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_20"
        >
        <ImageButton
            android:id="@+id/more_codelogin_activity_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/more_login_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/more_codelogin_logo"
        android:layout_width="@dimen/qb_px_128"
        android:layout_height="@dimen/qb_px_128"
        android:src="@drawable/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/more_codelogin_activity_title"
        android:layout_margin="@dimen/qb_px_10"/>

    <LinearLayout
        android:id="@+id/more_codelogin_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/qb_px_50"
        android:layout_marginRight="@dimen/qb_px_50"
        android:layout_below="@id/more_codelogin_logo">
        <EditText
            android:id="@+id/more_codelogin_activity_etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_login_et_bg"
            android:hint="@string/more_codelogin_etphone_text"
            android:drawableLeft="@drawable/et_phone"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/qb_px_10"
            android:drawablePadding="@dimen/qb_px_10"
            android:inputType="phone"
            android:maxLength="11"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_10"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/more_codelogin_activity_etcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/more_login_et_bg"
                android:hint="@string/more_codelogin_etcode_hint"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="@dimen/qb_px_10"
                android:drawableLeft="@drawable/et_code"
                android:drawablePadding="@dimen/qb_px_10"
                android:maxLength="6"
                android:layout_marginRight="@dimen/qb_px_20"
                android:inputType="number"
                />
            <Button
                android:id="@+id/more_codelogin_activity_btgetcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/more_codelogin_btgetcode_text"
                android:textSize="12sp"
                android:background="@drawable/more_bt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:id="@+id/more_codelogin_activity_btlogin"
            android:layout_marginTop="@dimen/qb_px_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_bt"
            android:text="@string/more_login_text"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
