<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_10"
        android:layout_margin="@dimen/qb_px_15"
        android:foreground="?attr/selectableItemBackground"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user_bg"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="@dimen/qb_px_30"
                android:layout_marginRight="@dimen/qb_px_30"
                >
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/more_login_head_portrait"
                    android:layout_width="@dimen/qb_px_80"
                    android:layout_height="@dimen/qb_px_80"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    fresco:placeholderImage="@drawable/more_not_login_bg"
                    />
                <TextView
                    android:id="@+id/more_login_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/qb_px_5"
                    android:layout_toRightOf="@id/more_login_head_portrait"
                    android:text="@string/more_not_login"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_clock_in"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:background="@drawable/more_stroke_bg"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/qb_px_5"
                    android:paddingBottom="@dimen/qb_px_5"
                    android:paddingLeft="@dimen/qb_px_20"
                    android:paddingRight="@dimen/qb_px_20"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/qb_px_10"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_num"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_clock_in"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <View
                    android:layout_width="@dimen/qb_px_1"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_num"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_blog_text"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <View
                    android:layout_width="@dimen/qb_px_1"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_num"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_diary_text"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
